Version 2.4.0b5

	Fixed a few bugs that caused arithmetic exceptions in planner.
	-Bob Willcox <bob@luke.pmr.com>, Evan Champion
	<evanc@synapse.net>, scott and oliva

	amrecover should now be able to handle GNUtar restores.
	-Jean-Louis Martineau <martinea@iro.umontreal.ca>

	Ported to SINIX (Reliant Unix V5.43).  -Michael Schmitz
	<mschmitz@iname.com>

	Configure now looks for large file support and will use it under
	Solaris 2.6 and above.  -Blair Zajac <blair@gps.caltech.edu>

	Compatibility problems fixed for:
		SCO OpenServer 5.0.2: Paul Gampe <paulg@twics.com>

Version 2.4.0b4

	New changerfile and changerdev configuration keywords, that
	allow changer scripts to be configured in the main amanda
	configuration file.  Each changer script has been adapted, so
	that it uses those flags whenever possible.  Also,
	documentation about built-in scripts has been added to
	docs/TAPE.CHANGERS.  -oliva & Eric Schnoebelen
	<eric@egsner.cirr.com>

	--with-debugging now accepts a directory name, where debugging
	files should be stored.  -John R. Jackson <jrj@cc.purdue.edu>

	Compatibility problems fixed for:
		NextStep 3.3: Fabrice GAILLARD <gaillard@ina.fr>
		SCO OpenServer V5: Christopher B. Olsen <colsen@compus.com>
		AIX: Georg Rehfeld <georg@wmd.de>

	Planner would core dump if it had to delay dumps.  -Georg
	Rehfeld <georg@wmd.de>

	Added patch for samba to support very long filenames.  -Todd
	Pfaff <todd@edge.cis.mcmaster.ca>

	Added VXDUMP support to estimate program.  -oliva & John
	R. Jackson <jrj@cc.purdue.edu>

	Fixed amflush so that it cd's to the configuration directory
	before invoking reporter.  -oliva

	driver no longer opens the infofile, so a deadlock is
	prevented.  -oliva & John R. Jackson <jrj@cc.purdue.edu>

	Fixed typo in sendbackup-dump that would prevent compilation
	if either xfsdump or vxdump were enabled.  -oliva

	Debugging messages produced by sendbackup are no longer
	included in the dump stream.  -oliva
